--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,20 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	implementation 'org.springframework:spring-context:5.3.23'
+	implementation 'org.springframework:spring-jdbc:5.3.23'
+	implementation 'org.springframework:spring-tx:5.3.23'
+
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
  	compileOnly 'org.projectlombok:lombok:1.18.24'
 
 	testCompileOnly 'org.projectlombok:lombok:1.18.24'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+	implementation platform('org.testcontainers:testcontainers-bom:1.17.5')
+
+	implementation 'mysql:mysql-connector-java:8.0.30'
+	testImplementation 'org.testcontainers:mysql'
 }
 
 tasks.named('test') {
